Revert "cache static files for low latency and create scheduled tasks to refresh cache"
This reverts commit 8142d4ec3f3a8b342a3e9cff3222fea48de45a9c.

--- a/app/static/css/themes/christmas_theme.css
+++ b/app/static/css/themes/christmas_theme.css
@@ -1,6 +1,6 @@
 /* static/css/christmas_theme.css */
-@import url('../../cache/css/quicksand.css');
-@import url('../../cache/css/great-vibes.css');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 
 /* --- Base Overrides --- */
 body {
