--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <title>Login</title>
-  <link href="{{ url_for('static', filename='cache/css/fonts.css') }}" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@500;600&display=swap"
+    rel="stylesheet">
   {% assets "css_all" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
   {% endassets %}
