--- a/app/static/css/themes/christmas_theme.css
+++ b/app/static/css/themes/christmas_theme.css
@@ -1,6 +1,6 @@
 /* static/css/christmas_theme.css */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+@import url('https://fonts.loli.net/css2?family=Quicksand:wght@400;500;700&display=swap');
+@import url('https://fonts.loli.net/css2?family=Great+Vibes&display=swap');
 
 /* --- Base Overrides --- */
 body {
